--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,24 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-03 Sun 08:23]
+#+CAPTION: Clock summary at [2019-03-03 Sun 10:41]
 | <75>                                                     |         |       |      |       |
 | Headline                                                 | Time    |       |      |     % |
 |----------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                             | *24:38* |       |      | 100.0 |
+| *Total time*                                             | *25:20* |       |      | 100.0 |
 |----------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                  | 24:38   |       |      | 100.0 |
-| Active                                                   |         | 24:38 |      | 100.0 |
-| Edit release notes for previous sprint                   |         |       | 1:27 |   5.9 |
+| Stories                                                  | 25:20   |       |      | 100.0 |
+| Active                                                   |         | 25:20 |      | 100.0 |
+| Edit release notes for previous sprint                   |         |       | 1:27 |   5.7 |
 | Sprint and product backlog grooming                      |         |       | 0:42 |   2.8 |
-| Implement text model generation chain in generation      |         |       | 3:45 |  15.2 |
-| Move generation model out of coding                      |         |       | 4:22 |  17.7 |
-| Rename endomodel to just model                           |         |       | 2:11 |   8.9 |
+| Implement text model generation chain in generation      |         |       | 3:45 |  14.8 |
+| Move generation model out of coding                      |         |       | 4:22 |  17.2 |
+| Rename endomodel to just model                           |         |       | 2:11 |   8.6 |
 | Remove exomodel remnants                                 |         |       | 0:03 |   0.2 |
-| Consider adding a dot graph of the transforms to probing |         |       | 1:47 |   7.2 |
-| Split annotations processing into two phases             |         |       | 3:10 |  12.9 |
-| Try to fix valgrind warning on =find_files=              |         |       | 0:20 |   1.4 |
-| Move injection processing out of coding                  |         |       | 6:51 |  27.8 |
+| Consider adding a dot graph of the transforms to probing |         |       | 1:47 |   7.0 |
+| Split annotations processing into two phases             |         |       | 3:10 |  12.5 |
+| Try to fix valgrind warning on =find_files=              |         |       | 0:20 |   1.3 |
+| Move injection processing out of coding                  |         |       | 7:33 |  29.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -436,6 +436,8 @@ We seem to be doing something wrong with directory iterators:
 
 *** STARTED Move injection processing out of coding                   :story:
     :LOGBOOK:
+    CLOCK: [2019-03-03 Sun 10:11]--[2019-03-03 Sun 10:41] =>  0:30
+    CLOCK: [2019-03-03 Sun 09:59]--[2019-03-03 Sun 10:11] =>  0:12
     CLOCK: [2019-03-03 Sun 08:15]--[2019-03-03 Sun 08:23] =>  0:08
     CLOCK: [2019-03-03 Sun 07:23]--[2019-03-03 Sun 08:14] =>  0:51
     CLOCK: [2019-03-02 Sat 19:38]--[2019-03-02 Sat 19:45] =>  0:07
