--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,24 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-03 Sun 10:41]
-| <75>                                                     |         |       |      |       |
-| Headline                                                 | Time    |       |      |     % |
-|----------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                             | *25:20* |       |      | 100.0 |
-|----------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                  | 25:20   |       |      | 100.0 |
-| Active                                                   |         | 25:20 |      | 100.0 |
-| Edit release notes for previous sprint                   |         |       | 1:27 |   5.7 |
-| Sprint and product backlog grooming                      |         |       | 0:42 |   2.8 |
-| Implement text model generation chain in generation      |         |       | 3:45 |  14.8 |
-| Move generation model out of coding                      |         |       | 4:22 |  17.2 |
-| Rename endomodel to just model                           |         |       | 2:11 |   8.6 |
-| Remove exomodel remnants                                 |         |       | 0:03 |   0.2 |
-| Consider adding a dot graph of the transforms to probing |         |       | 1:47 |   7.0 |
-| Split annotations processing into two phases             |         |       | 3:10 |  12.5 |
-| Try to fix valgrind warning on =find_files=              |         |       | 0:20 |   1.3 |
-| Move injection processing out of coding                  |         |       | 7:33 |  29.8 |
+#+CAPTION: Clock summary at [2019-03-04 Mon 09:27]
+| <75>                                                     |         |       |       |       |
+| Headline                                                 | Time    |       |       |     % |
+|----------------------------------------------------------+---------+-------+-------+-------|
+| *Total time*                                             | *30:14* |       |       | 100.0 |
+|----------------------------------------------------------+---------+-------+-------+-------|
+| Stories                                                  | 30:14   |       |       | 100.0 |
+| Active                                                   |         | 30:14 |       | 100.0 |
+| Edit release notes for previous sprint                   |         |       |  1:27 |   4.8 |
+| Sprint and product backlog grooming                      |         |       |  0:42 |   2.3 |
+| Implement text model generation chain in generation      |         |       |  3:45 |  12.4 |
+| Move generation model out of coding                      |         |       |  4:22 |  14.4 |
+| Rename endomodel to just model                           |         |       |  2:11 |   7.2 |
+| Remove exomodel remnants                                 |         |       |  0:03 |   0.2 |
+| Consider adding a dot graph of the transforms to probing |         |       |  1:47 |   5.9 |
+| Split annotations processing into two phases             |         |       |  3:10 |  10.5 |
+| Try to fix valgrind warning on =find_files=              |         |       |  0:20 |   1.1 |
+| Move injection processing out of coding                  |         |       | 12:27 |  41.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -436,6 +436,10 @@ We seem to be doing something wrong with directory iterators:
 
 *** STARTED Move injection processing out of coding                   :story:
     :LOGBOOK:
+    CLOCK: [2019-03-04 Mon 09:00]--[2019-03-04 Mon 09:27] =>  0:27
+    CLOCK: [2019-03-04 Mon 07:59]--[2019-03-04 Mon 08:28] =>  1:04
+    CLOCK: [2019-03-03 Sun 20:55]--[2019-03-03 Sun 21:04] =>  0:09
+    CLOCK: [2019-03-03 Sun 16:08]--[2019-03-03 Sun 18:55] =>  2:47
     CLOCK: [2019-03-03 Sun 15:21]--[2019-03-03 Sun 16:07] =>  0:46
     CLOCK: [2019-03-03 Sun 12:30]--[2019-03-03 Sun 12:46] =>  0:16
     CLOCK: [2019-03-03 Sun 10:11]--[2019-03-03 Sun 10:41] =>  0:30
@@ -496,6 +500,12 @@ Notes:
   "references2" and populate it with the new style of references. Then
   create a parallel transform chain that can be switched on and off
   with a macro from orchestration.
+
+*** Add logging to console again                                      :story:
+
+We removed logging to console because we didn't have any use cases,
+but there is at least one and its really useful: debugging. Add it
+back again.
 
 *** Rename =fallback_element_type=                                    :story:
 
