--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,24 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-04 Mon 11:59]
+#+CAPTION: Clock summary at [2019-03-04 Mon 14:33]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *32:42* |       |       | 100.0 |
+| *Total time*                                             | *32:56* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 32:42   |       |       | 100.0 |
-| Active                                                   |         | 32:42 |       | 100.0 |
+| Stories                                                  | 32:56   |       |       | 100.0 |
+| Active                                                   |         | 32:56 |       | 100.0 |
 | Edit release notes for previous sprint                   |         |       |  1:27 |   4.4 |
 | Sprint and product backlog grooming                      |         |       |  0:42 |   2.1 |
-| Implement text model generation chain in generation      |         |       |  3:45 |  11.5 |
-| Move generation model out of coding                      |         |       |  4:22 |  13.4 |
-| Rename endomodel to just model                           |         |       |  2:11 |   6.7 |
+| Implement text model generation chain in generation      |         |       |  3:45 |  11.4 |
+| Move generation model out of coding                      |         |       |  4:22 |  13.3 |
+| Rename endomodel to just model                           |         |       |  2:11 |   6.6 |
 | Remove exomodel remnants                                 |         |       |  0:03 |   0.2 |
-| Consider adding a dot graph of the transforms to probing |         |       |  1:47 |   5.5 |
-| Split annotations processing into two phases             |         |       |  3:10 |   9.7 |
+| Consider adding a dot graph of the transforms to probing |         |       |  1:47 |   5.4 |
+| Split annotations processing into two phases             |         |       |  3:10 |   9.6 |
 | Try to fix valgrind warning on =find_files=              |         |       |  0:20 |   1.0 |
-| Move injection processing out of coding                  |         |       | 14:55 |  45.6 |
+| Move injection processing out of coding                  |         |       | 15:09 |  46.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -436,6 +436,7 @@ We seem to be doing something wrong with directory iterators:
 
 *** STARTED Move injection processing out of coding                   :story:
     :LOGBOOK:
+    CLOCK: [2019-03-04 Mon 14:19]--[2019-03-04 Mon 14:33] =>  0:14
     CLOCK: [2019-03-04 Mon 11:55]--[2019-03-04 Mon 12:00] =>  0:05
     CLOCK: [2019-03-04 Mon 11:20]--[2019-03-04 Mon 11:54] =>  0:34
     CLOCK: [2019-03-04 Mon 10:53]--[2019-03-04 Mon 11:19] =>  0:26
