--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,24 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-04 Mon 15:17]
+#+CAPTION: Clock summary at [2019-03-04 Mon 15:54]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *33:37* |       |       | 100.0 |
+| *Total time*                                             | *34:12* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 33:37   |       |       | 100.0 |
-| Active                                                   |         | 33:37 |       | 100.0 |
-| Edit release notes for previous sprint                   |         |       |  1:27 |   4.3 |
-| Sprint and product backlog grooming                      |         |       |  0:42 |   2.1 |
-| Implement text model generation chain in generation      |         |       |  3:45 |  11.2 |
-| Move generation model out of coding                      |         |       |  4:22 |  13.0 |
-| Rename endomodel to just model                           |         |       |  2:11 |   6.5 |
+| Stories                                                  | 34:12   |       |       | 100.0 |
+| Active                                                   |         | 34:12 |       | 100.0 |
+| Edit release notes for previous sprint                   |         |       |  1:27 |   4.2 |
+| Sprint and product backlog grooming                      |         |       |  0:42 |   2.0 |
+| Implement text model generation chain in generation      |         |       |  3:45 |  11.0 |
+| Move generation model out of coding                      |         |       |  4:22 |  12.8 |
+| Rename endomodel to just model                           |         |       |  2:11 |   6.4 |
 | Remove exomodel remnants                                 |         |       |  0:03 |   0.1 |
-| Consider adding a dot graph of the transforms to probing |         |       |  1:47 |   5.3 |
-| Split annotations processing into two phases             |         |       |  3:10 |   9.4 |
+| Consider adding a dot graph of the transforms to probing |         |       |  1:47 |   5.2 |
+| Split annotations processing into two phases             |         |       |  3:10 |   9.3 |
 | Try to fix valgrind warning on =find_files=              |         |       |  0:20 |   1.0 |
-| Move injection processing out of coding                  |         |       | 15:50 |  47.1 |
+| Move injection processing out of coding                  |         |       | 16:25 |  48.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -436,6 +436,7 @@ We seem to be doing something wrong with directory iterators:
 
 *** STARTED Move injection processing out of coding                   :story:
     :LOGBOOK:
+    CLOCK: [2019-03-04 Mon 15:47]--[2019-03-04 Mon 15:54] =>  0:07
     CLOCK: [2019-03-04 Mon 15:18]--[2019-03-04 Mon 15:46] =>  0:28
     CLOCK: [2019-03-04 Mon 15:02]--[2019-03-04 Mon 15:17] =>  0:15
     CLOCK: [2019-03-04 Mon 14:52]--[2019-03-04 Mon 15:01] =>  0:09
