--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,24 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-04 Mon 15:54]
+#+CAPTION: Clock summary at [2019-03-04 Mon 17:16]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *34:12* |       |       | 100.0 |
+| *Total time*                                             | *35:32* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 34:12   |       |       | 100.0 |
-| Active                                                   |         | 34:12 |       | 100.0 |
-| Edit release notes for previous sprint                   |         |       |  1:27 |   4.2 |
+| Stories                                                  | 35:32   |       |       | 100.0 |
+| Active                                                   |         | 35:32 |       | 100.0 |
+| Edit release notes for previous sprint                   |         |       |  1:27 |   4.1 |
 | Sprint and product backlog grooming                      |         |       |  0:42 |   2.0 |
-| Implement text model generation chain in generation      |         |       |  3:45 |  11.0 |
-| Move generation model out of coding                      |         |       |  4:22 |  12.8 |
-| Rename endomodel to just model                           |         |       |  2:11 |   6.4 |
+| Implement text model generation chain in generation      |         |       |  3:45 |  10.6 |
+| Move generation model out of coding                      |         |       |  4:22 |  12.3 |
+| Rename endomodel to just model                           |         |       |  2:11 |   6.1 |
 | Remove exomodel remnants                                 |         |       |  0:03 |   0.1 |
-| Consider adding a dot graph of the transforms to probing |         |       |  1:47 |   5.2 |
-| Split annotations processing into two phases             |         |       |  3:10 |   9.3 |
-| Try to fix valgrind warning on =find_files=              |         |       |  0:20 |   1.0 |
-| Move injection processing out of coding                  |         |       | 16:25 |  48.0 |
+| Consider adding a dot graph of the transforms to probing |         |       |  1:47 |   5.0 |
+| Split annotations processing into two phases             |         |       |  3:10 |   8.9 |
+| Try to fix valgrind warning on =find_files=              |         |       |  0:20 |   0.9 |
+| Move injection processing out of coding                  |         |       | 17:45 |  50.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -436,6 +436,8 @@ We seem to be doing something wrong with directory iterators:
 
 *** STARTED Move injection processing out of coding                   :story:
     :LOGBOOK:
+    CLOCK: [2019-03-04 Mon 16:15]--[2019-03-04 Mon 17:16] =>  1:01
+    CLOCK: [2019-03-04 Mon 15:55]--[2019-03-04 Mon 16:14] =>  0:19
     CLOCK: [2019-03-04 Mon 15:47]--[2019-03-04 Mon 15:54] =>  0:07
     CLOCK: [2019-03-04 Mon 15:18]--[2019-03-04 Mon 15:46] =>  0:28
     CLOCK: [2019-03-04 Mon 15:02]--[2019-03-04 Mon 15:17] =>  0:15
@@ -534,6 +536,14 @@ container against the global refs.
 
 It would be nice to generate a tracing of the model dependencies. This
 may not necessarily be part of tracing.
+
+*** LAM name resolution should be PIM only                            :story:
+
+With the current approach, we are not resolving any names until after
+we've mapped LAM models into a PSM. This possibly means that users can
+provide a model with non-LAM types. Ideally we should not allow
+this. Check to see if we are validating this in the present mapping
+code.
 
 *** Add logging to console again                                      :story:
 
