--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,24 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-04 Mon 17:29]
+#+CAPTION: Clock summary at [2019-03-04 Mon 17:50]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *35:44* |       |       | 100.0 |
+| *Total time*                                             | *36:04* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 35:44   |       |       | 100.0 |
-| Active                                                   |         | 35:44 |       | 100.0 |
-| Edit release notes for previous sprint                   |         |       |  1:27 |   4.1 |
-| Sprint and product backlog grooming                      |         |       |  0:42 |   2.0 |
-| Implement text model generation chain in generation      |         |       |  3:45 |  10.5 |
-| Move generation model out of coding                      |         |       |  4:22 |  12.2 |
+| Stories                                                  | 36:04   |       |       | 100.0 |
+| Active                                                   |         | 36:04 |       | 100.0 |
+| Edit release notes for previous sprint                   |         |       |  1:27 |   4.0 |
+| Sprint and product backlog grooming                      |         |       |  0:42 |   1.9 |
+| Implement text model generation chain in generation      |         |       |  3:45 |  10.4 |
+| Move generation model out of coding                      |         |       |  4:22 |  12.1 |
 | Rename endomodel to just model                           |         |       |  2:11 |   6.1 |
 | Remove exomodel remnants                                 |         |       |  0:03 |   0.1 |
-| Consider adding a dot graph of the transforms to probing |         |       |  1:47 |   5.0 |
-| Split annotations processing into two phases             |         |       |  3:10 |   8.9 |
+| Consider adding a dot graph of the transforms to probing |         |       |  1:47 |   4.9 |
+| Split annotations processing into two phases             |         |       |  3:10 |   8.8 |
 | Try to fix valgrind warning on =find_files=              |         |       |  0:20 |   0.9 |
-| Move injection processing out of coding                  |         |       | 17:57 |  50.2 |
+| Move injection processing out of coding                  |         |       | 18:17 |  50.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -436,6 +436,7 @@ We seem to be doing something wrong with directory iterators:
 
 *** STARTED Move injection processing out of coding                   :story:
     :LOGBOOK:
+    CLOCK: [2019-03-04 Mon 17:30]--[2019-03-04 Mon 17:50] =>  0:20
     CLOCK: [2019-03-04 Mon 17:17]--[2019-03-04 Mon 17:29] =>  0:12
     CLOCK: [2019-03-04 Mon 16:15]--[2019-03-04 Mon 17:16] =>  1:01
     CLOCK: [2019-03-04 Mon 15:55]--[2019-03-04 Mon 16:14] =>  0:19
